# Repositories-Manager

./: .gitignore  README.md  pyproject.toml
app/: requirements.txt
app/tests/: test_repositories_manager.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py
backend/tests/: test_initial_setup.py
